ASSERTION failed in Windows: css3/css3-modsel-33.html https://bugs.webkit.org/show_bug.cgi?id=104472

Patch by Xueqing Huang <huangxueqing@baidu.com> on 2012-12-10
Reviewed by Tim Horton.

In WebFrameLoaderClient::dispatchDidLayout, milestones maybe
DidFirstLayout & DidFirstVisualNonEmptyLayout, we should
use seperate COMPtrs for the two cases rather than reuse one.

* WebCoreSupport/WebFrameLoaderClient.cpp:
(WebFrameLoaderClient::dispatchDidLayout):

Canonical link: https://commits.webkit.org/122801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137246 268f45cc-cd09-0410-ab3c-d52691b4dbfc